<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CodePath Image Finder</string>
    <string name="action_settings">Settings</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_image_filter">Advanced Search Filters</string>
    <string name="title_advanced_search_options">Advanced search options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string-array name="image_sizes">
        <item>None</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>
    <string-array name="image_colors">
        <item>None</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="image_types">
        <item>None</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clip Art</item>
        <item>Line Art</item>
	</string-array>
    <string name="reset_options">Reset options</string>
    <string name="ok">OK</string>
    <string name="error_network">Error: No Internet connection found</string>    
    <string name="button_search">Search</string>
    <string name="button_filter">Filter</string>
</resources>
